# tokenspace-mcp

./: .gitignore  README.md  claude_code_config.json  pyproject.toml
.claude/: SKILL.md
benchmarks/: harness.py  harness_real.py
benchmarks/results/: benchmark.csv  benchmark_real.csv
docs/: SPEC.md
src/scalpel/: SKILL.md  core.py  measure.py  server.py
src/tokenspace/: __init__.py  core.py  plugin.py  server.py  types.py
tests/: test_core.py  test_measure.py  test_server.py
