[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scalpel-mcp"
version = "0.1.1"
description = "Surgical AST-based Python editing for AI agents — edit by symbol name, not text position. Built-in blast radius and token cost on every edit."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Vansh Momaya", email = "vanshmomaya9@gmail.com" }]
keywords = ["mcp", "ast", "python", "claude", "libcst", "code-editing", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "libcst>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/VanshMomaya7/scalpel"
Repository = "https://github.com/VanshMomaya7/scalpel"

[project.scripts]
scalpel = "scalpel.server:main"

[dependency-groups]
dev = [
    "hypothesis>=6.152.6",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scalpel"]
artifacts = [".claude/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.ruff]
src = ["src"]
